<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF505F78"
    tools:context="com.bashirk.balc.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWtGender">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblWeight"
            android:id="@+id/txtViewWeight"
            android:textSize="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/txtWeight"
            android:hint="@string/txtHntWeight"
            android:textSize="15dp"/>

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblGender"
            android:id="@+id/txtViewGender"
            android:textSize="15dp"/>

        <Switch
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchGender"
            android:textOn="M"
            android:textOff="F"
            android:switchMinWidth="40dp"
            android:fitsSystemWindows="true"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:showText="true"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutSave"
        android:layout_below="@+id/layoutWtGender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:id="@+id/btnSave"
            android:onClick="save"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDrinkSize"
        android:layout_below="@+id/layoutWtGender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblDrinkSize"
            android:id="@+id/txtViewDrinkSize"
            android:textSize="15dp"
            android:layout_marginTop="5dp"/>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rdGrpDrinkSize">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdBtnLblOneOz"
                android:id="@+id/rdBtnOneOz"
                android:checked="true"
                android:layout_weight="1"
                android:textSize="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdBtnLblFiveOz"
                android:id="@+id/rdBtnFiveOz"
                android:layout_weight="1"
                android:textSize="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdBtnLblTwelveOz"
                android:id="@+id/rdBtnTwelveOz"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAlcohol"
        android:layout_below="@+id/layoutDrinkSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblAlcoholPercentage"
            android:id="@+id/txtViewAlcoholPercentage"
            android:textSize="15dp"
            android:layout_marginTop="5dp"/>

        <SeekBar
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/skBarAlcoholPercentage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtViewSeekBarValue"
            android:text="5 %"
            android:textSize="15dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAddDrinkRest"
        android:layout_below="@+id/layoutAlcohol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLblAddDrink"
                android:id="@+id/btnAddDrink"
                android:onClick="addDrink"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnLblReset"
                android:id="@+id/btnReset"
                android:onClick="resetFields"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutBACLevel"
        android:layout_below="@+id/layoutAddDrinkRest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblBACLevel"
            android:id="@+id/txtViewBACLevel"
            android:layout_marginLeft="40dp"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtViewBACLevelValue"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutProgressBar"
        android:layout_below="@+id/layoutBACLevel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <ProgressBar
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prgBarBACLevel"
            android:layout_below="@+id/txtViewBACLevel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutStatus"
        android:layout_below="@+id/layoutProgressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lblStatus"
                android:id="@+id/txtViewStatus"
                android:layout_marginLeft="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txtViewStatusValue" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
